@@ -1,5 +1,6 @@
 * 1.9.2
 	* New features:
+		- Add ip_filter relative commands(2016-02-17)
 		- Binlog capacity can be set in config file(2016-01-14)
 		- Provide zfix command to repair broken zset(2015-12-02)
 		- Supports specifying slaveof.host in ssdb.conf(2015-11-23)
